--- a/lib/package.json
+++ b/lib/package.json
@@ -8,8 +8,13 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "angular-route": "^1.6.4",
-    "google-maps": "^3.2.1"
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-sass": "^1.2.1",
+    "matchdep": "^1.0.1"
   }
 }
