--- a/lib/package.json
+++ b/lib/package.json
@@ -16,5 +16,8 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-sass": "^1.2.1",
     "matchdep": "^1.0.1"
+  },
+  "dependencies": {
+    "google-maps": "^3.2.1"
   }
 }
