--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-lib/node_modules
-lib/bower_components
-javascript/AppConstants.js
+public/lib/node_modules
+public/lib/bower_components
+public/javascript/AppConstants.js
